Sun Jun 19 16:55:16 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_dir_m17n.rb: Skip tests with non-UTF-8 encodings
	  on cygwin. Cygwin can use the Unicode PUA (private use area) to store
	  bytes from non-UTF-8 filenames (see
	  https://cygwin.com/cygwin-ug-net/using-specialnames.html#pathnames-specialchars),
	  but we are not supporting this. [Bug #12443]

Sun Jun 19 15:01:18 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* localeinit.c: Fix filesystem encoding for cygwin to UTF-8 (see
	  https://cygwin.com/cygwin-ug-net/using-specialnames.html#pathnames-unusual)

Sun Jun 19 14:31:07 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey.h, ext/openssl/ossl_pkey_dh.c,
	  ext/openssl/ossl_pkey_dsa.c, ext/openssl/ossl_pkey_rsa.c: A few days
	  ago, OpenSSL changed {DH,DSA,RSA}_get0_*() to take const BIGNUM **.
	  https://git.openssl.org/gitweb/?p=openssl.git;a=commit;h=fd809cfdbd6e32b6b67b68c59f6d55fbed7a9327
	  [ruby-core:75225] [Feature #12324]

Sun Jun 19 11:19:43 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_path_to_class): consider the string length
	  instead of a terminator.

	* variable.c (rb_path_to_class): search the constant at once
	  instead of checking if defined and then getting it.

Sat Jun 18 14:01:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/rubygems/test_gem_installer.rb: Fixed broken test with extension
	  build. https://github.com/rubygems/rubygems/pull/1645

Sat Jun 18 13:59:54 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems
	  HEAD(2c6d256). It contains to update vendored Molinillo to 0.5.0.
	  https://github.com/rubygems/rubygems/pull/1638

Sat Jun 18 10:13:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (build-ext), ext/extmk.rb: use variable EXTENCS
	  different than ENCOBJS, to get rid of circular dependency.
	  build libencs when linking encodings statically.
	  [ruby-core:75618] [Bug #12401]
